force-app/main/default/objects/Facility_List__c/Facility_List__c.object-meta.xml
<CustomObject>
    <description>grouping of accounts with like price attributes</description>
    <label>Facility List</label>
    <nameField>
        <label>Facility List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>