force-app/main/default/objects/Facility_List__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Lists</relationshipLabel>
    <relationshipName>Facility_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>