force-app/main/default/objects/Facility_List__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CESContract__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Version 3 Enabling Agreement, NAESB 2002 Enabling Agreement, NAESB 2006 Enabling Agreement, Version 2 Enabling Agreement</value>
        </filterItems>
        <filterItems>
            <field>CESContract__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Filtered for Facility List Account Agreements. Remove filter to search for Parent Account Agreements</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Facility Lists</relationshipLabel>
    <relationshipName>Facility_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>