force-app/main/default/objects/Facility_List__c/fields/Assignment_From_FL__c.field-meta.xml
<CustomField>
    <fullName>Assignment_From_FL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment From Facility List</label>
    <referenceTo>Facility_List__c</referenceTo>
    <relationshipLabel>Facility Lists</relationshipLabel>
    <relationshipName>Facility_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>