force-app/main/default/objects/Facility_List__c/fields/Database_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>Database_to_Sync__c</fullName>
    <description>if set to database code, informatica will initiate premise and bill group fields for safari sync</description>
    <inlineHelpText>if set to database code, informatica will initiate premise and bill group fields for safari sync</inlineHelpText>
    <label>Database to Sync</label>
    <length>30</length>
    <type>Text</type>
</CustomField>