force-app/main/default/objects/Facility_List__c/fields/Facility_List_Formula__c.field-meta.xml
<CustomField>
    <fullName>Facility_List_Formula__c</fullName>
    <description>formula to retrieve the correct facility list number for contractual documents</description>
    <formula>IF(
ISBLANK( Safari_Facility_List_Number__c ),
 Facility_List_Number__c ,
  Safari_Facility_List_Number__c 
)</formula>
    <inlineHelpText>formula to retrieve the correct facility list number for contractual documents</inlineHelpText>
    <label>Facility List Formula</label>
    <type>Text</type>
</CustomField>