force-app/main/default/objects/Facility_List__c/fields/Facility_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_List_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Facility List Number</label>
    <type>AutoNumber</type>
</CustomField>