force-app/main/default/objects/Facility_List__c/fields/FL_Link__c.field-meta.xml
<CustomField>
    <fullName>FL_Link__c</fullName>
    <description>used for facility list creation from safari data</description>
    <label>FL Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>