force-app/main/default/objects/Facility_List__c/fields/Invoice_By_Facility__c.field-meta.xml
<CustomField>
    <fullName>Invoice_By_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should each facility be invoiced separately?</description>
    <inlineHelpText>Should each facility be invoiced separately?</inlineHelpText>
    <label>Invoice By Facility</label>
    <type>Checkbox</type>
</CustomField>