force-app/main/default/objects/Facility_List__c/fields/LDC_Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>LDC_Rate_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDC Rate Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LDC_Rate_Class__c.LDC__c</field>
            <operation>equals</operation>
            <valueField>$Source.Utility__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LDC_Rate_Class__c</referenceTo>
    <relationshipLabel>Facility Lists</relationshipLabel>
    <relationshipName>Facility_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>