force-app/main/default/objects/Facility_List__c/fields/Number_of_Meters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Meters__c</fullName>
    <label>Number of Meters</label>
    <summaryForeignKey>Premise_List__c.Facility_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>