force-app/main/default/objects/Facility_List__c/fields/Pipeline_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Lookup</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Facility Lists</relationshipLabel>
    <relationshipName>Facility_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>