force-app/main/default/objects/Facility_List__c/fields/Safari_Facility_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Safari_Facility_List_Number__c</fullName>
    <label>Safari Facility List Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>