force-app/main/default/objects/Facility_List__c/recordTypes/CES_C_I_Facility_List.recordType-meta.xml
<RecordType>
    <fullName>CES_C_I_Facility_List</fullName>
    <active>true</active>
    <label>CES C&amp;I Facility List</label>
</RecordType>