force-app/main/default/objects/Facility_List__c/recordTypes/Gas_Choice_Facility_List.recordType-meta.xml
<RecordType>
    <fullName>Gas_Choice_Facility_List</fullName>
    <active>true</active>
    <label>Gas Choice Facility List</label>
</RecordType>