force-app/main/default/objects/Facility_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Utility__c</columns>
    <columns>Pipeline__c</columns>
    <columns>LDC_Rate_Class__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>