force-app/main/default/objects/Facility_List__c/listViews/Gas_Choice.listView-meta.xml
<ListView>
    <fullName>Gas_Choice</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Utility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Facility_List__c.Gas_Choice_Facility_List</value>
    </filters>
    <label>Gas Choice</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>